<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SWITCH</string>
    <string name="title_switch">SWITCH</string>
    <string name="subtitle_switch">Switch it on...</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>